<?xml version="1.0"?>
<package format="3">
  <name>helper_package</name>
  <version>0.1.0</version>
  <description>Helper package with shared utility functions for ROS 2.</description>

  <maintainer email="k.khadka343@gmail.com">Kailash Khadka</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>composition</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake</test_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
    <library>helper_functions</library>
  </export>
</package>
